🐛 Fixed email domain blocklist not being checked when a member updates their email address (#22320)
closes https://linear.app/ghost/issue/ONC-797/spam-filter-not-applied-when-updating-an-email-address

With this change, we extend the email domain blocklist to the member's email
update feature (previously: only on signups)

- Added logic in `MemberController.js` to validate email domains against
a list of blocked domains from`settingsCache
(all_blocked_email_domains)` before allowing updates.
- Enhanced error messaging in `api.js` and `actions.js` in Portal to
return a specific error ("Memberships from this email domain are
currently restricted.") when a blocked domain error from API is
detected.
- Added a new E2E test to verify that changing an email to a blocked
domain is prevented (status 400 with appropriate error message) and that
changing an email to a allowed domain is still allowed (status 201)
- Added the new error message to localisation files (portal.json) across
multiple languages for consistent user feedback.

---------

Co-authored-by: Sag <guptazy@gmail.com>

--- a/ghost/i18n/locales/bs/portal.json
+++ b/ghost/i18n/locales/bs/portal.json
@@ -103,6 +103,7 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Provjeri jesu li se Email poruke slučajno završile u spam folderu ili promocijama vašeg poštanskog sandučića. Ako jesu, označite ih kao sigurne i/ili ih premjestite u glavni sandučić.",
     "Manage": "Upravljaj",
     "Maybe later": "Možda kasnije",
+    "Memberships from this email domain are currently restricted.": "",
     "Memberships unavailable, contact the owner for access.": "Članstvo nije dostupno, kontaktiraj vlasnika za pristup.",
     "month": "",
     "Monthly": "Mjesečno",
