--- a/ghost/i18n/locales/fr/portal.json
+++ b/ghost/i18n/locales/fr/portal.json
@@ -103,6 +103,7 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Assurez-vous que les e-mails ne finissent pas accidentellement dans le dossier Indésirables ou Publicité de votre boîte de réception. Si c'était le cas, cliquez sur \"Marquer en tant que désirable\" et/ou \"Déplacer vers la boîte de réception\".",
     "Manage": "Gérer",
     "Maybe later": "Peut-être plus tard",
+    "Memberships from this email domain are currently restricted.": "",
     "Memberships unavailable, contact the owner for access.": "Abonnements non disponibles. Veuillez prendre contact avec le propriétaire pour y accéder.",
     "month": "mois",
     "Monthly": "Mensuel",
