--- a/ghost/i18n/locales/hu/portal.json
+++ b/ghost/i18n/locales/hu/portal.json
@@ -103,6 +103,7 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Győződjön meg róla, hogy az e-mailek véletlenül nem kerülnek-e a Spam vagy Promóciók mappába az email fiókjában. Ha igen, kattintson a 'Nem spam' és/vagy az 'Áthelyezés a beérkezők közé' lehetőségekre.",
     "Manage": "Kezelés",
     "Maybe later": "",
+    "Memberships from this email domain are currently restricted.": "",
     "Memberships unavailable, contact the owner for access.": "A feliratkozás nem elérhető! Kérjük lépjen kapcsolatba a tulajdonossal a hozzáférésért.",
     "month": "",
     "Monthly": "Havi",
