Passed whole newsletter object on signup

--- a/ghost/i18n/locales/context.json
+++ b/ghost/i18n/locales/context.json
@@ -141,6 +141,7 @@
     "Maybe later": "An informal phrase to dismiss or close a popup",
     "Member discussion": "Default title for the comments section on a post",
     "Member since": "",
+    "Memberships from this email domain are currently restricted.": "",
     "Memberships unavailable, contact the owner for access.": "Inform a user that memberships are only available by contacting the site owner",
     "Monthly": "A label to indicate a monthly payment cadence",
     "More like this": "A label for the thumbs-up response in member feedback at the bottom of emails",
