--- a/ghost/i18n/locales/fr/newsletter.json
+++ b/ghost/i18n/locales/fr/newsletter.json
@@ -1,4 +1,6 @@
 {
+    "{date}": "{date}",
+    "Become a paid member of {site} to get access to all premium content.": "",
     "By {authors}": "Par {authors}",
     "Comment": "Commentaire",
     "complimentary": "offert",
@@ -14,6 +16,8 @@
     "Subscription details": "Détails de l'abonnement",
     "trialing": "en période d'essai",
     "Unsubscribe": "Se désabonner",
+    "Upgrade": "",
+    "Upgrade to continue reading.": "",
     "View in browser": "Voir dans le navigateur",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Vous recevez ceci parce que vous êtes un-e <strong>abonné-e %%{status}%%</strong> de {site}.",
     "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "Votre essai gratuit se termine le {date}, après quoi le prix normal vous sera facturé. Vous pouvez toujours annuler avant cette date.",
