--- a/ghost/i18n/locales/vi/newsletter.json
+++ b/ghost/i18n/locales/vi/newsletter.json
@@ -1,4 +1,6 @@
 {
+    "{date}": "{date}",
+    "Become a paid member of {site} to get access to all premium content.": "",
     "By {authors}": "Bởi {authors}",
     "Comment": "Bình luận",
     "complimentary": "thân gửi",
@@ -14,6 +16,8 @@
     "Subscription details": "Chi tiết gói thành viên",
     "trialing": "đọc thử",
     "Unsubscribe": "Hủy gói",
+    "Upgrade": "",
+    "Upgrade to continue reading.": "",
     "View in browser": "Xem bằng trình duyệt",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Bạn nhận được bảng tin này vì bạn là <strong>thành viên %%{status}%%</strong> của {site}.",
     "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "Gói đọc thử của bạn sẽ kết thúc vào {date} và sau đó bắt đầu tính phí. Bạn luôn có thể hủy gói trước thời điểm này.",
