--- a/ghost/i18n/locales/nl/ghost.json
+++ b/ghost/i18n/locales/nl/ghost.json
@@ -10,8 +10,8 @@
     "For your security, the link will expire in 24 hours time.": "Voor je veiligheid vervalt de link na 24 uur.",
     "Hey there,": "Hallo,",
     "Hey there!": "Hallo!",
-    "If you did not make this request, you can safely ignore this email.": "Als deze aanvraag niet van jou is kun je deze e-mail negeren.",
-    "If you did not make this request, you can simply delete this message.": "Als deze aanvraag niet van jou is kun je deze e-mail verwijderen.",
+    "If you did not make this request, you can safely ignore this email.": "Als jij deze aanvraag niet hebt gedaan kun je deze e-mail negeren.",
+    "If you did not make this request, you can simply delete this message.": "Als jij deze aanvraag niet hebt gedaan kun je deze e-mail verwijderen.",
     "Please confirm your email address with this link:": "Bevestig je e-mailadres met deze link:",
     "Secure sign in link for {{siteTitle}}": "Veilige inloglink voor {{siteTitle}}",
     "See you soon!": "Tot snel!",
