Added corrected Hungarian locale for Portal

--- a/ghost/i18n/locales/hu/comments.json
+++ b/ghost/i18n/locales/hu/comments.json
@@ -53,7 +53,7 @@
     "Sending": "Küldés",
     "Sent": "Elküldve",
     "Show": "Mutat",
-    "Show {{amount}} more replies": "Mutass {{amount}} még válaszokat",
+    "Show {{amount}} more replies": "Mutass még {{amount}} választ",
     "Show {{amount}} previous comments": "Mutass {{amount}} előző hozzászólást",
     "Show 1 more reply": "Mutass még egy választ",
     "Show 1 previous comment": "Mutass egy előző hozzászólást",
