🌐 Updated Bulgarian translations (#22324)
- Minor improvements to the previously translated strings
- Translation of a newly introduced string

--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -15,7 +15,7 @@
     "Account": "Профил",
     "Account details updated successfully": "Настройките бяха успешно обновени",
     "Account settings": "Настройки",
-    "Add a personal note": "",
+    "Add a personal note": "Добавяне на лична бележка",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "След приключване на безплатния период ще бъдете таксувани според обявените цени. Можете да се откажете преди изтичането на безплатния период.",
     "Already a member?": "Абонат ли сте вече?",
     "An error occurred": "Възникна грешка",
@@ -126,7 +126,7 @@
     "Please enter {{fieldName}}": "Моля, попълнете {{fieldName}}",
     "Please fill in required fields": "Моля, попълнете задължителните полета",
     "Price": "Цена",
-    "Re-enable emails": "Позволете отново изпращането на писма",
+    "Re-enable emails": "Възобновете изпращането на писма",
     "Recommendations": "Препоръки",
     "Renews at {{price}}.": "Подновяване за {{price}}.",
     "Retry": "Отново",
@@ -145,7 +145,7 @@
     "Sorry, no recommendations are available right now.": "За жалост, в момента няма налични препоръки.",
     "Sorry, that didn’t work.": "Жалко, така не става.",
     "Spam complaints": "Оплаквания от спам",
-    "Start {{amount}}-day free trial": "Започване на {{amount}}-дневен безплатен достъп.",
+    "Start {{amount}}-day free trial": "Започни {{amount}}-дневен безплатен достъп",
     "Starting {{startDate}}": "Започва на {{startDate}}",
     "Starting today": "Стартира днес",
     "Submit feedback": "Изпрати отзив",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Благодарности за подкрепата ви!",
     "Thanks for the feedback!": "Благодарности за обратната връзка!",
     "That didn't go to plan": "Това не стана както бе планирано",
-    "The email address we have for you is {{memberEmail}} — if that's not correct, you can update it in your <button>account settings area</button>.": "Имейлът, който имаме за вас, е {{memberEmail}} - ако не е верен, можете да го актуализирате в <button>настройките на профила</button> си.",
+    "The email address we have for you is {{memberEmail}} — if that's not correct, you can update it in your <button>account settings area</button>.": "Имейлът, с който сте вписан е {{memberEmail}} - ако не е верен, актуализирайте го в <button>настройките на профила</button> си.",
     "There was a problem submitting your feedback. Please try again a little later.": "Имаше проблем при изпращането на обратната връзка. Моля, опитайте отново малко по-късно.",
     "There was an error cancelling your subscription, please try again.": "Възникна грешка при отмяната на абонамента ви, опитайте отново.",
     "There was an error continuing your subscription, please try again.": "Възникна грешка при продължаването на абонамента ви, опитайте отново.",
