--- a/ghost/i18n/locales/nl/ghost.json
+++ b/ghost/i18n/locales/nl/ghost.json
@@ -10,8 +10,8 @@
     "For your security, the link will expire in 24 hours time.": "Voor je veiligheid vervalt de link na 24 uur.",
     "Hey there,": "Hallo,",
     "Hey there!": "Hallo!",
-    "If you did not make this request, you can safely ignore this email.": "Als deze aanvraag niet van jou is, kun je deze e-mail negeren.",
-    "If you did not make this request, you can simply delete this message.": "Als deze aanvraag niet van jou is, kun je deze e-mail verwijderen.",
+    "If you did not make this request, you can safely ignore this email.": "Als jij deze aanvraag niet hebt gedaan kun je deze e-mail negeren.",
+    "If you did not make this request, you can simply delete this message.": "Als jij deze aanvraag niet hebt gedaan kun je deze e-mail verwijderen.",
     "Please confirm your email address with this link:": "Bevestig je e-mailadres met deze link:",
     "Secure sign in link for {{siteTitle}}": "Veilige inloglink voor {{siteTitle}}",
     "See you soon!": "Tot snel!",
@@ -26,9 +26,9 @@
     "This email address will not be used.": "Dit e-mailadres zal niet worden niet gebruikt.",
     "Welcome back to {{siteTitle}}!": "Welkom terug bij {{siteTitle}}!",
     "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "Welkom terug! Gebruik deze link om veilig in te loggen op je {{siteTitle}} account:",
-    "You can also copy & paste this URL into your browser:": "Je kan deze URL ook kopiëren en plakken in je browser:",
-    "You will not be signed up, and no account will be created for you.": "Je zal niet worden geregistreerd en er zal geen account voor je worden aangemaakt.",
-    "You will not be subscribed.": "Je zal niet worden geabonneerd.",
+    "You can also copy & paste this URL into your browser:": "Je kunt deze URL ook kopiëren en plakken in je browser:",
+    "You will not be signed up, and no account will be created for you.": "Je zult niet worden geregistreerd en er zal geen account voor je worden aangemaakt.",
+    "You will not be subscribed.": "Je zult niet worden geabonneerd.",
     "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "Je bent één klik verwijderd van een abonnement op {{siteTitle}} — bevestig je e-mailadres met deze link:",
     "You're one tap away from subscribing to {{siteTitle}}!": "Je bent één klik verwijderd van een abonnement op {{siteTitle}}!"
 }
