--- a/ghost/i18n/locales/de-CH/newsletter.json
+++ b/ghost/i18n/locales/de-CH/newsletter.json
@@ -16,7 +16,7 @@
     "Unsubscribe": "Abbestellen",
     "View in browser": "Im Browser öffnen",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Sie erhalten diese Nachricht, da Sie ein <strong>%%{status}%% Mitglied</strong> unserer Seite «{{site}}» sind.",
-    "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "Ihr Probeabo endet am {date}, ab dann wird Ihnen der reguläre Preis in Rechnung gestellt. Sie können ihr Abo jederzeit zuvor kündigen.",
+    "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "Ihr Probeabo endet am {date}, ab dann wird Ihnen der reguläre Preis in Rechnung gestellt. Sie können Ihr Abo jederzeit zuvor kündigen.",
     "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "Ihr Abo wurde gekündigt und läuft am {date} ab. Sie können Ihr Abo in den Kontoeinstellungen verlängern.",
     "Your subscription has expired.": "Ihr Abo ist abgelaufen.",
     "Your subscription will expire on {date}.": "Ihr Abo läuft am {date} ab.",
