--- a/ghost/i18n/locales/es/newsletter.json
+++ b/ghost/i18n/locales/es/newsletter.json
@@ -3,7 +3,7 @@
     "Comment": "Comentar",
     "complimentary": "de cortesía",
     "Email": "Correo electrónico",
-    "free": "Gratuita",
+    "free": "gratuita",
     "Keep reading": "Sigue leyendo",
     "Less like this": "Menos como esto",
     "Manage subscription": "Gestionar tu suscripción",
@@ -12,7 +12,7 @@
     "Name": "Nombre",
     "paid": "de pago",
     "Subscription details": "Detalles de tu suscripción",
-    "trialing": "probando",
+    "trialing": "de prueba",
     "Unsubscribe": "Darse de baja",
     "View in browser": "Ver en el navegador",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Recibes este mensaje porque tienes una suscripción <strong>%%{status}%%</strong> a {site}.",
