--- a/ghost/i18n/locales/hu/newsletter.json
+++ b/ghost/i18n/locales/hu/newsletter.json
@@ -1,28 +1,28 @@
 {
     "{date}": "{date}",
-    "Become a paid member of {site} to get access to all premium content.": "",
-    "By {authors}": "",
-    "Comment": "",
+    "Become a paid member of {site} to get access to all premium content.": "Legyen {site} előfizető, hogy minden értékes tartalmunkhoz hozzáférjen. ",
+    "By {authors}": "{authors}",
+    "Comment": "Hozzászólás",
     "complimentary": "",
-    "Email": "",
-    "free": "",
-    "Keep reading": "",
-    "Less like this": "",
-    "Manage subscription": "",
-    "Member since": "",
-    "More like this": "",
-    "Name": "",
-    "paid": "",
-    "Subscription details": "",
-    "trialing": "",
-    "Unsubscribe": "",
-    "Upgrade": "",
-    "Upgrade to continue reading.": "",
-    "View in browser": "",
-    "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "",
-    "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "",
-    "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "",
-    "Your subscription has expired.": "",
-    "Your subscription will expire on {date}.": "",
-    "Your subscription will renew on {date}.": ""
+    "Email": "E-mail",
+    "free": "ingyenes",
+    "Keep reading": "Tovább olvasok",
+    "Less like this": "Kevesebb",
+    "Manage subscription": "Előfizetés kezelése",
+    "Member since": "Előfizetés dátuma",
+    "More like this": "Több ilyet",
+    "Name": "Név",
+    "paid": "fizetve",
+    "Subscription details": "Előfizetés részletei",
+    "trialing": "próbaidő alatt",
+    "Unsubscribe": "Leiratkozás",
+    "Upgrade": "Csomagváltás",
+    "Upgrade to continue reading.": "Válts csomagot, hogy olvass tovább.",
+    "View in browser": "Megnyitás böngészőben",
+    "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Ezt azért kapod, mert {site} <strong>%%{status}%% előfizető</strong> vagy.",
+    "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "Az ingyenes próbaidő lejárati dátuma {date}, amely napon terhelni fogjuk a kártyád. Előtte bármikor lemondható az előfizetés.",
+    "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "Az előfizetés lemondásra került, még használható {date}-ig. Újraindítható a fiókodba belépve.",
+    "Your subscription has expired.": "Az előfizetés lejárt.",
+    "Your subscription will expire on {date}.": "Az előfizetés lejáratának dátuma {date}. ",
+    "Your subscription will renew on {date}.": "Az előfizetés megújulásának dátuma {date}."
 }
