--- a/ghost/i18n/locales/context.json
+++ b/ghost/i18n/locales/context.json
@@ -132,7 +132,7 @@
     "Jamie Larson": "An unisex name of a person we use in examples",
     "Join the discussion": "Placeholder value of the comments input box",
     "Just now": "Time indication when a comment has been posted 'just now'",
-    "Keep reading": "Header above the selectino of recent posts, shown in the newsletter email",
+    "Keep reading": "Header above the selection of recent posts, shown in the newsletter email",
     "Less like this": "A label for the thumbs-down response in member feedback at the bottom of emails",
     "Load more ({{amount}})": "Link to display more comments, when paginated, showing how many are left to see",
     "Local resident": "Example of an expertise of a person used in comments when editing your expertise",
@@ -326,7 +326,7 @@
     "{{amount}} days free": "A label for an offer, explaining how long the trial is",
     "{{amount}} hrs ago": "how long (in hours) since a comment was posted",
     "{{amount}} mins ago": "how long in minutes since a comment was posted",
-    "{{amount}} more": "how many more cmoments are present in the list, when paginated",
+    "{{amount}} more": "how many more comments are present in the list, when paginated",
     "{{amount}} off": "A label for an offer, explaining how much the discount is for",
     "{{amount}} off for first {{number}} months.": "A label for an offer, explaining how many months are discounted",
     "{{amount}} off for first {{period}}.": "A label for an offer, explaining how long the discount is for (either first month or year)",
