Added Dhivehi locales for ghostjson

--- a/ghost/i18n/locales/dv/ghost.json
+++ b/ghost/i18n/locales/dv/ghost.json
@@ -1,34 +1,34 @@
 {
-    "All the best!": "",
-    "Complete signup for {{siteTitle}}!": "",
-    "Complete your sign up to {{siteTitle}}!": "",
-    "Confirm email address": "",
-    "Confirm signup": "",
-    "Confirm your email address": "",
-    "Confirm your email update for {{siteTitle}}!": "",
-    "Confirm your subscription to {{siteTitle}}": "",
-    "For your security, the link will expire in 24 hours time.": "",
-    "Hey there,": "",
-    "Hey there!": "",
-    "If you did not make this request, you can safely ignore this email.": "",
-    "If you did not make this request, you can simply delete this message.": "",
-    "Please confirm your email address with this link:": "",
-    "Secure sign in link for {{siteTitle}}": "",
-    "See you soon!": "",
-    "Sent to {{email}}": "",
-    "Sign in": "",
-    "Sign in to {{siteTitle}}": "",
-    "Tap the link below to complete the signup process for {{siteTitle}}, and be automatically signed in:": "",
-    "Thank you for signing up to {{siteTitle}}!": "",
-    "Thank you for subscribing to {{siteTitle}}!": "",
-    "Thank you for subscribing to {{siteTitle}}.": "",
-    "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "",
-    "This email address will not be used.": "",
-    "Welcome back to {{siteTitle}}!": "",
-    "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "",
-    "You can also copy & paste this URL into your browser:": "",
-    "You will not be signed up, and no account will be created for you.": "",
-    "You will not be subscribed.": "",
-    "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "",
-    "You're one tap away from subscribing to {{siteTitle}}!": ""
+    "All the best!": "ހެޔޮއެދުންތައް!",
+    "Complete signup for {{siteTitle}}!": "{{siteTitle}} އަށް ސައިންއަޕް ފުރިހަމަކުރައްވާ!",
+    "Complete your sign up to {{siteTitle}}!": "{{siteTitle}} އަށް ސައިންއަޕް ކުރުން ފުރިހަމަކުރައްވާ!",
+    "Confirm email address": "އީމެއިލް އެޑްރެސް ޔަގީންކުރައްވާ",
+    "Confirm signup": "ސައިންއަޕް ޔަގީންކުރައްވާ",
+    "Confirm your email address": "ތިބާގެ އީމެއިލް އެޑްރެސް ޔަގީންކުރައްވާ",
+    "Confirm your email update for {{siteTitle}}!": "{{siteTitle}} އަށް ތިބާގެ އީމެއިލް އަޕްޑޭޓް ޔަގީންކުރައްވާ!",
+    "Confirm your subscription to {{siteTitle}}": "{{siteTitle}} އަށް ތިބާގެ ސަބްސްކްރިޕްޝަން ޔަގީންކުރައްވާ",
+    "For your security, the link will expire in 24 hours time.": "ތިބާގެ ރައްކާތެރިކަމަށްޓަކައި، މި ލިންކް 24 ގަޑިއިރުގެ ތެރޭގައި މުއްދަތު ހަމަވާނެއެވެ.",
+    "Hey there,": "އައްސަލާމް,",
+    "Hey there!": "އައްސަލާމް!",
+    "If you did not make this request, you can safely ignore this email.": "ތިޔަ އެދިވަޑައިނުގަންނަވާނަމަ، މި އީމެއިލް ރައްކާތެރިކަމާއެކު އަޅާނުލާ ދޫކޮށްލެވިދާނެއެވެ.",
+    "If you did not make this request, you can simply delete this message.": "ތިޔަ އެދިވަޑައިނުގަންނަވާނަމަ، މި މެސެޖް ފަސޭހައިން ޑިލީޓްކޮށްލެވިދާނެއެވެ.",
+    "Please confirm your email address with this link:": "މި ލިންކް ބޭނުންކޮށްގެން ތިބާގެ އީމެއިލް އެޑްރެސް ޔަގީންކުރައްވާ:",
+    "Secure sign in link for {{siteTitle}}": "{{siteTitle}} އަށް ރައްކާތެރި ސައިން އިން ލިންކް",
+    "See you soon!": "އަވަހަށް ދެންނެވޭނެ!",
+    "Sent to {{email}}": "{{email}} އަށް ފޮނުވުނީ",
+    "Sign in": "ސައިން އިން ވެވަޑައިގަންނަވާ",
+    "Sign in to {{siteTitle}}": "{{siteTitle}} އަށް ސައިން އިން ވެވަޑައިގަންނަވާ",
+    "Tap the link below to complete the signup process for {{siteTitle}}, and be automatically signed in:": "{{siteTitle}} އަށް ސައިންއަޕް ކުރުމުގެ މަރުހަލާ ފުރިހަމަކުރުމަށް ތިރީގައިވާ ލިންކަށް ޓެޕްކޮށްލައްވާ، އަދި އޮޓޮމެޓިކުން ސައިން އިން ވެވަޑައިގަންނަވާ:",
+    "Thank you for signing up to {{siteTitle}}!": "{{siteTitle}} އަށް ސައިންއަޕް ކުރެއްވީތީ ޝުކުރިއްޔާ!",
+    "Thank you for subscribing to {{siteTitle}}!": "{{siteTitle}} އަށް ސަބްސްކްރައިބް ކުރެއްވީތީ ޝުކުރިއްޔާ!",
+    "Thank you for subscribing to {{siteTitle}}.": "{{siteTitle}} އަށް ސަބްސްކްރައިބް ކުރެއްވީތީ ޝުކުރިއްޔާ.",
+    "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "{{siteTitle}} އަށް ސަބްސްކްރައިބް ކުރެއްވީތީ ޝުކުރިއްޔާ. އޮޓޮމެޓިކުން ސައިން އިން ވުމަށް ތިރީގައިވާ ލިންކަށް ޓެޕްކޮށްލައްވާ:",
+    "This email address will not be used.": "މި އީމެއިލް އެޑްރެސް ބޭނުމެއް ނުކުރާނެއެވެ.",
+    "Welcome back to {{siteTitle}}!": "{{siteTitle}} އަށް އަލުން މަރުހަބާ!",
+    "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "އަލުން މަރުހަބާ! ތިބާގެ {{siteTitle}} އެކައުންޓަށް ރައްކާތެރިކަމާއެކު ސައިން އިން ވުމަށް މި ލިންކް ބޭނުންކުރައްވާ:",
+    "You can also copy & paste this URL into your browser:": "ތިބާގެ ބްރައުޒަރަށް މި ޔޫއާރްއެލް ކޮޕީކޮށް ޕޭސްޓްވެސް ކުރެވިދާނެއެވެ:",
+    "You will not be signed up, and no account will be created for you.": "ތިޔާ ސައިންއަޕްއެއް ނުވާނެ، އަދި ތިބާއަށް އެކައުންޓެއްވެސް ނުއުފައްދާނެއެވެ.",
+    "You will not be subscribed.": "ތިޔާ ސަބްސްކްރައިބްއެއް ނުވާނެއެވެ.",
+    "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "{{siteTitle}} އަށް ސަބްސްކްރައިބް ވުމަށް ތިޔަވަނީ އެންމެ ޓެޕަކާ ދުރުގައެވެ — މި ލިންކް ބޭނުންކޮށްގެން ތިބާގެ އީމެއިލް އެޑްރެސް ޔަގީންކުރައްވާ:",
+    "You're one tap away from subscribing to {{siteTitle}}!": "{{siteTitle}} އަށް ސަބްސްކްރައިބް ވުމަށް ތިޔަވަނީ އެންމެ ޓެޕަކާ ދުރުގައެވެ!"
 }
