Added Dhivehi locales for newsletter

--- a/ghost/i18n/locales/dv/newsletter.json
+++ b/ghost/i18n/locales/dv/newsletter.json
@@ -1,28 +1,28 @@
 {
     "{date}": "{date}",
-    "Become a paid member of {site} to get access to all premium content.": "",
-    "By {authors}": "",
-    "Comment": "",
-    "complimentary": "",
-    "Email": "",
-    "free": "",
-    "Keep reading": "",
-    "Less like this": "",
-    "Manage subscription": "",
-    "Member since": "",
-    "More like this": "",
-    "Name": "",
-    "paid": "",
-    "Subscription details": "",
-    "trialing": "",
-    "Unsubscribe": "",
-    "Upgrade": "",
-    "Upgrade to continue reading.": "",
-    "View in browser": "",
-    "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "",
-    "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "",
-    "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "",
-    "Your subscription has expired.": "",
-    "Your subscription will expire on {date}.": "",
-    "Your subscription will renew on {date}.": ""
+    "Become a paid member of {site} to get access to all premium content.": "{site} ގެ ހުރިހާ ޕްރިމިއަމް މޮންޓެންޓްތަކަށް އެކްސެސް ލިބިގަތުމަށް {site} ގެ ފައިސާ ދައްކާ މެމްބަރަކަށް ވެވަޑައިގަންނަވާ.",
+    "By {authors}": "{authors} ލިޔުއްވައިފއި",
+    "Comment": "ކޮމެންޓް",
+    "complimentary": "ހިލޭ",
+    "Email": "އީމެއިލް",
+    "free": "ހިލޭ",
+    "Keep reading": "ކިޔުން ކުރިއަށް ގެންދަވާ",
+    "Less like this": "މިފަދަ އެއްޗެހި މަދުކުރައްވާ",
+    "Manage subscription": "ސަބްސްކްރިޕްޝަން މެނޭޖްކުރައްވާ",
+    "Member since": "މެމްބަރަކަށްވީ ދުވަހުންސުރެ",
+    "More like this": "މިފަދަ އެއްޗެހި އިތުރުކުރައްވާ",
+    "Name": "ނަން",
+    "paid": "ފައިސާދައްކާ",
+    "Subscription details": "ސަބްސްކްރިޕްޝަންގެ ތަފްސީލް",
+    "trialing": "ޓްރައަލްކުރަނީ",
+    "Unsubscribe": "ސަބްސްކްރައިބް ނުކުރައްވާ",
+    "Upgrade": "އަޕްގްރޭޑް ކުރައްވާ",
+    "Upgrade to continue reading.": "ކިޔުން ކުރިއަށް ގެންދިއުމަށް އަޕްގްރޭޑް ކުރައްވާ.",
+    "View in browser": "ބްރައުޒަރ އިން ބައްލަވާ",
+    "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "ތިޔަ މިހާރު މި ލިބިވަޑައިގަންނަވަނީ ތިޔަބޭފުޅާ {site} ގެ <strong>%%{status}%% ސަބްސްކްރައިބަރަކަށް</strong> ވާތީވެ.",
+    "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "ތިބާގެ ހިލޭ ޓްރައަލް {date} ގައި ނިމޭނެއެވެ، އޭރުން އާންމު އަގު ނެގޭނެއެވެ. ތިޔަބޭފުޅާއަށް އަބަދުވެސް އޭގެ ކުރިން ކެންސަލް ކުރެވޭނެއެވެ.",
+    "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "ތިބާގެ ސަބްސްކްރިޕްޝަން ކެންސަލްކޮށްފއިވޭ އަދި {date} ގައި މުއްދަތު ހަމަވާނެއެވެ. ތިބާގެ އެކައުންޓް ސެޓިންގްސް މެދުވެރިކޮށް ސަބްސްކްރިޕްޝަން އަލުން ފެށިދާނެއެވެ.",
+    "Your subscription has expired.": "ތިބާގެ ސަބްސްކްރިޕްޝަންގެ މުއްދަތު ހަމަވެއްޖެއެވެ.",
+    "Your subscription will expire on {date}.": "ތިބާގެ ސަބްސްކްރިޕްޝަންގެ މުއްދަތު {date} ގައި ހަމަވާނެއެވެ.",
+    "Your subscription will renew on {date}.": "ތިބާގެ ސަބްސްކްރިޕްޝަން {date} ގައި އާވާނެއެވެ."
 }
