--- a/ghost/i18n/locales/sv/portal.json
+++ b/ghost/i18n/locales/sv/portal.json
@@ -179,7 +179,7 @@
     "Too many different sign-in attempts, try again in {{number}} days": "För många olika inloggningsförsök, testa igen om {{number}} dagar.",
     "Too many different sign-in attempts, try again in {{number}} hours": "För många olika inloggningsförsök, testa igen om {{number}} timmar.",
     "Too many different sign-in attempts, try again in {{number}} minutes": "För många olika inloggningsförsök, testa igen om {{number}} minuter.",
-    "Too many sign-up attempts, try again later": "För många olika inloggningsförsök, prova igen senare.",
+    "Too many sign-up attempts, try again later": "För många olika registreringsförsök, prova igen senare.",
     "Try free for {{amount}} days, then {{originalPrice}}.": "Prova gratis i {{amount}} dagar, sen betalar du {{originalPrice}}.",
     "Unable to initiate checkout session": "Kan inte initiera utcheckningssession",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Få tillgång till alla nyhetsbrev genom att bli betalande prenumerant",
