--- a/ghost/i18n/locales/vi/portal.json
+++ b/ghost/i18n/locales/vi/portal.json
@@ -15,7 +15,7 @@
     "Account": "Tài khoản",
     "Account details updated successfully": "Đã cập nhật chi tiết tài khoản thành công",
     "Account settings": "Cài đặt",
-    "Add a personal note": "",
+    "Add a personal note": "Thêm lưu ý về người này",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Sau khi hết hạn đọc thử miễn phí, sẽ tính phí với gói thành viên mà bạn đã chọn. Bạn có thể hủy gói trước khi hết hạn đọc thử.",
     "Already a member?": "Bạn đã là thành viên?",
     "An error occurred": "Xảy ra lỗi",
@@ -79,7 +79,7 @@
     "Failed to update account details": "Không thể cập nhật chi tiết tài khoản",
     "Failed to update billing information, please try again": "Không thể cập nhật thông tin thanh toán, vui lòng thử lại",
     "Failed to update newsletter settings": "Không thể cập nhật thiết lập bản tin email",
-    "Failed to update subscription, please try again": "Không thể cập nhật theo dõi, vui lòng thử lại",
+    "Failed to update subscription, please try again": "Không thể cập nhật gói, vui lòng thử lại",
     "Forever": "Vĩnh viễn",
     "Free Trial – Ends {{trialEnd}}": "Đọc Thử – Hết hạn vào {{trialEnd}}",
     "Get help": "Trợ giúp",
@@ -104,7 +104,7 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Hãy chắc rằng email không đang trong hộp thư Spam hoặc Quảng cáo. Nếu đang vậy, chọn \"Đánh dấu không phải spam\" hoặc \"Chuyển tới Hộp thư đến\".",
     "Manage": "Quản lý",
     "Maybe later": "Để sau",
-    "Memberships from this email domain are currently restricted.": "",
+    "Memberships from this email domain are currently restricted.": "Thành viên từ dịch vụ email này đang bị hạn chế.",
     "Memberships unavailable, contact the owner for access.": "Chưa phải là thành viên, liên hệ với chủ sở hữu để truy cập.",
     "month": "tháng",
     "Monthly": "Hàng tháng",
@@ -183,16 +183,16 @@
     "Try free for {{amount}} days, then {{originalPrice}}.": "Đọc thử {{amount}} ngày, phí sau đọc thử là {{originalPrice}}.",
     "Unable to initiate checkout session": "Không thể bắt đầu phiên thanh toán",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Trở thành thành viên trả phí để mở khóa truy cập toàn bộ bản tin.",
-    "Unsubscribe from all emails": "Hủy tất cả email đăng ký",
-    "Unsubscribed": "Đã hủy đăng ký",
-    "Unsubscribed from all emails.": "Đã hủy toàn bộ email đăng ký",
-    "Unsubscribing from emails will not cancel your paid subscription to {{title}}": "Việc hủy email đăng ký sẽ không hủy gói thành viên trả phí của bạn đối với {{title}}",
+    "Unsubscribe from all emails": "Hủy nhận tất cả email",
+    "Unsubscribed": "Đã hủy nhận email",
+    "Unsubscribed from all emails.": "Đã hủy nhận tất cả email",
+    "Unsubscribing from emails will not cancel your paid subscription to {{title}}": "Việc hủy nhận email sẽ không hủy gói thành viên trả phí của bạn đối với {{title}}",
     "Update": "Cập nhật",
     "Update your preferences": "Cập nhật thiết lập",
     "Verification link sent, check your inbox": "Đã gửi liên kết xác minh, hãy kiểm tra email",
     "Verify your email address is correct": "Xác minh địa chỉ email của bạn là đúng",
     "View plans": "Xem các gói",
-    "We couldn't unsubscribe you as the email address was not found. Please contact the site owner.": "Chúng tôi không thể hủy đăng ký vì không tìm thấy địa chỉ email. Vui lòng liên hệ với chủ sở hữu trang web.",
+    "We couldn't unsubscribe you as the email address was not found. Please contact the site owner.": "Chúng tôi không thể hủy gói vì không tìm thấy địa chỉ email. Vui lòng liên hệ với chủ sở hữu trang web.",
     "Welcome back, {{name}}!": "Chào mừng trở lại, {{name}}!",
     "Welcome back!": "Chào mừng trở lại!",
     "Welcome to {{siteTitle}}": "Chào mừng tham gia {{siteTitle}}",
@@ -201,14 +201,14 @@
     "year": "năm",
     "Yearly": "Hàng năm",
     "You currently have a free membership, upgrade to a paid subscription for full access.": "Bạn đang là thành viên thường, hãy nâng cấp gói thành viên trả phí để có thể truy cập đầy đủ.",
-    "You have been successfully resubscribed": "Bạn đã đăng ký lại thành công",
+    "You have been successfully resubscribed": "Bạn đã gia hạn gói thành công",
     "You're currently not receiving emails": "Hiện tại bạn không nhận email",
     "You're not receiving emails": "Bạn không nhận email",
     "You're not receiving emails because you either marked a recent message as spam, or because messages could not be delivered to your provided email address.": "Bạn không nhận email vì bạn đã đánh dấu một email gần đây là thư rác, hoặc vì địa chỉ email bạn đã cung cấp không thể gửi được.",
     "You've successfully signed in.": "Bạn đã đăng nhập thành công.",
-    "You've successfully subscribed to": "Bạn đã đăng ký thành công",
+    "You've successfully subscribed to": "Bạn đã đăng ký gói thành công",
     "Your account": "Tài khoản của bạn",
-    "Your email has failed to resubscribe, please try again": "Email của bạn không thể đăng ký lại, vui lòng thử lại",
+    "Your email has failed to resubscribe, please try again": "Email của bạn không thể gia hạn, vui lòng thử lại",
     "Your input helps shape what gets published.": "Thông tin của bạn chọn giúp định hình nội dung được xuất bản.",
     "Your subscription will expire on {{expiryDate}}": "Gói thành viên của bạn sẽ hết hạn vào {{expiryDate}}",
     "Your subscription will renew on {{renewalDate}}": "Gói thành viên của bạn sẽ tự động gia hạn vào {{renewalDate}}",
