--- a/ghost/i18n/locales/vi/newsletter.json
+++ b/ghost/i18n/locales/vi/newsletter.json
@@ -19,7 +19,7 @@
     "Upgrade": "Nâng cấp",
     "Upgrade to continue reading.": "Nâng cấp để đọc tiếp",
     "View in browser": "Xem bằng trình duyệt",
-    "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Bạn nhận được bảng tin này vì bạn là <strong>thành viên %%{status}%%</strong> của {site}.",
+    "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Bạn nhận được bản tin này vì bạn là <strong>thành viên %%{status}%%</strong> của {site}.",
     "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "Gói đọc thử của bạn sẽ kết thúc vào {date} và sau đó bắt đầu tính phí. Bạn luôn có thể hủy gói trước thời điểm này.",
     "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "Gói thành viên của bạn đã bị hủy và sẽ hết hạn vào {date}. Bạn có thể tiếp tục lại trong cài đặt tài khoản.",
     "Your subscription has expired.": "Gói thành viên của bạn đã hết hạn.",
