--- a/ghost/i18n/locales/vi/ghost.json
+++ b/ghost/i18n/locales/vi/ghost.json
@@ -13,22 +13,22 @@
     "If you did not make this request, you can safely ignore this email.": "Nếu bạn không thực hiện yêu cầu này, vui lòng bỏ qua email này.",
     "If you did not make this request, you can simply delete this message.": "Nếu bạn không thực hiện yêu cầu này, hãy xóa email này.",
     "Please confirm your email address with this link:": "Vui lòng xác nhận địa chỉ email của bạn bằng liên kết này:",
-    "Secure sign in link for {{siteTitle}}": "Liên kết đăng nhập an toàn trên {{siteTitle}}",
+    "Secure sign in link for {{siteTitle}}": "Liên kết đăng nhập {{siteTitle}} an toàn",
     "See you soon!": "Hẹn gặp lại bạn!",
     "Sent to {{email}}": "Đã gửi đến {{email}}",
     "Sign in": "Đăng nhập",
     "Sign in to {{siteTitle}}": "Đăng nhập {{siteTitle}}",
     "Tap the link below to complete the signup process for {{siteTitle}}, and be automatically signed in:": "Nhấn vào liên kết bên dưới để hoàn tất quy trình đăng ký {{siteTitle}} và tự động đăng nhập:",
     "Thank you for signing up to {{siteTitle}}!": "Cám ơn bạn đã trở thành thành viên {{siteTitle}}!",
-    "Thank you for subscribing to {{siteTitle}}!": "Cám ơn bạn đã đăng ký thành viên trên {{siteTitle}}!",
-    "Thank you for subscribing to {{siteTitle}}.": "Cám ơn bạn đã đăng ký thành viên trên {{siteTitle}}!",
-    "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "Cám ơn bạn đã đăng ký {{siteTitle}}. Nhấn vào liên kết bên dưới để đăng nhập tự động:",
+    "Thank you for subscribing to {{siteTitle}}!": "Cám ơn bạn đã đăng ký gói thành viên {{siteTitle}}!",
+    "Thank you for subscribing to {{siteTitle}}.": "Cám ơn bạn đã đăng ký gói thành viên {{siteTitle}}.",
+    "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "Cám ơn bạn đã đăng ký gói thành viên {{siteTitle}}. Nhấn vào liên kết bên dưới để đăng nhập tự động:",
     "This email address will not be used.": "Địa chỉ email này sẽ không còn sử dụng.",
-    "Welcome back to {{siteTitle}}!": "Chào mừng trở lại {{siteTitle}}!",
-    "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "Chào mừng trở lại! Sử dụng liên kết này để đăng nhập an toàn vào tài khoản {{siteTitle}} của bạn:",
+    "Welcome back to {{siteTitle}}!": "Chào mừng quay lại {{siteTitle}}!",
+    "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "Chào mừng quay lại! Sử dụng liên kết này để đăng nhập an toàn vào tài khoản {{siteTitle}} của bạn:",
     "You can also copy & paste this URL into your browser:": "Bạn cũng có thể sao chép và dán URL này vào trình duyệt:",
     "You will not be signed up, and no account will be created for you.": "Bạn sẽ không đăng ký và không tạo tài khoản.",
-    "You will not be subscribed.": "Bạn sẽ không đăng ký.",
+    "You will not be subscribed.": "Bạn sẽ không đăng ký gói.",
     "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "Còn một bước nữa để đăng ký {{siteTitle}} — vui lòng xác nhận địa chỉ email của bạn bằng liên kết này:",
     "You're one tap away from subscribing to {{siteTitle}}!": "Còn một bước nữa để đăng ký {{siteTitle}}!"
 }
