--- a/ghost/i18n/locales/bg/comments.json
+++ b/ghost/i18n/locales/bg/comments.json
@@ -12,7 +12,7 @@
     "Anonymous": "Анонимен",
     "Are you sure?": "Убедени ли сте?",
     "Become a member of {{publication}} to start commenting.": "Абонирайте се за {{publication}}, за да коментирате.",
-    "Become a paid member of {{publication}} to start commenting.": "Станете платен абонат на {{publication}}, за да коментирате.",
+    "Become a paid member of {{publication}} to start commenting.": "Станете плащащ абонат на {{publication}}, за да коментирате.",
     "Cancel": "Отказ",
     "Comment": "Коментар",
     "Complete your profile": "Попълнете профила си",
