--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -104,7 +104,7 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Уверете се, че имейлите не попадат случайно в папките за спам и промоции на входящата ви поща. Ако това е така, щракнете върху \"Не е спам\" и/или \"Премести във входяща поща\".",
     "Manage": "Управление",
     "Maybe later": "Може би по-късно",
-    "Memberships from this email domain are currently restricted.": "",
+    "Memberships from this email domain are currently restricted.": "Абонаментите за този домейн са ограничени.",
     "Memberships unavailable, contact the owner for access.": "Няма възможност за абонамент, свържете се със собственика на сайта за достъп.",
     "month": "месец",
     "Monthly": "Месечно",
@@ -170,7 +170,7 @@
     "There was an error sending the email, please try again": "Възникна грешка при изпращане на имейл, опитайте отново",
     "This site is invite-only, contact the owner for access.": "Сайтът е само с покани. Свържете се със собственика за да получите достъп.",
     "This site is not accepting payments at the moment.": "В момента сайтът не приема плащания.",
-    "This site only accepts paid members.": "Този сайт приема само платени потребители.",
+    "This site only accepts paid members.": "Този сайт приема само плащащи потребители.",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "За да приключите регистрацията, последвайте препратката в съобщението, изпратено Ви по имейл. Ако не пристигне до 3 минути, проверете дали не е категоризирано като нежелано писмо.",
     "To continue to stay up to date, subscribe to {{publication}} below.": "За да останете информирани, запишете се за {{publication}} по-долу.",
     "Too many attempts try again in {{number}} days.": "Твърде много опити. Опитайте отново след {{number}} дни.",
@@ -182,7 +182,7 @@
     "Too many sign-up attempts, try again later": "Твърде много опити за регистрация, опитайте пак по-късно",
     "Try free for {{amount}} days, then {{originalPrice}}.": "Тествайте безплатно за {{amount}} дни, след това {{originalPrice}}.",
     "Unable to initiate checkout session": "Невъзможност за започване на сесия за плащане",
-    "Unlock access to all newsletters by becoming a paid subscriber.": "Отключете достъпа до всички бюлетини, като станете платен абонат.",
+    "Unlock access to all newsletters by becoming a paid subscriber.": "Отключете достъпа до всички бюлетини, като станете плащащ абонат.",
     "Unsubscribe from all emails": "Прекрати изпращането на всякакви писма",
     "Unsubscribed": "Отписан",
     "Unsubscribed from all emails.": "Отписване от всички имейли.",
