Shortened the French translation for the "Upgrade" button

--- a/ghost/i18n/locales/fr/newsletter.json
+++ b/ghost/i18n/locales/fr/newsletter.json
@@ -16,7 +16,7 @@
     "Subscription details": "Détails de l'abonnement",
     "trialing": "en période d'essai",
     "Unsubscribe": "Se désabonner",
-    "Upgrade": "Passez à l'abonnement payant",
+    "Upgrade": "Modifiez votre abonnement",
     "Upgrade to continue reading.": "Modifiez votre abonnement pour lire la suite.",
     "View in browser": "Voir dans le navigateur",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Vous recevez ceci parce que vous êtes un·e <strong>abonné·e %%{status}%%</strong> de {site}.",
